--- a/app/src/main/res/layout/item_favmovie.xml
+++ b/app/src/main/res/layout/item_favmovie.xml
@@ -1,50 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardMaxElevation="5dp"
-    app:cardCornerRadius="15dp"
-    android:layout_margin="20dp"
-    android:id="@+id/recom"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:id = "@+id/detail_fav"
+    <data>
+
+
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        app:cardMaxElevation="5dp"
+        app:cardCornerRadius="15dp"
         android:layout_margin="20dp"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:id="@+id/recom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_filmimage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_launcher_background"
-            android:contentDescription="TODO"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tv_namafilm"
-            android:layout_marginTop="10dp"
-            android:text="Judul"
+        <LinearLayout
+            android:id="@+id/detail_fav"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_release"
-            android:layout_marginTop="10dp"
-            android:text="Tanggal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/iv_filmimage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_launcher_background"
+                android:contentDescription="TODO"
+                tools:ignore="ContentDescription" />
 
-        <CheckBox
-            android:id="@+id/favorites_check_box"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/ic_baseline_delete_24" />
+            <TextView
+                android:id="@+id/tv_namafilm"
+                android:layout_marginTop="10dp"
+                android:text="title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_release"
+                android:layout_marginTop="10dp"
+                android:text="Release"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-</com.google.android.material.card.MaterialCardView>
+            <CheckBox
+                android:id="@+id/favorites_check_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/ic_baseline_favorite_white_24" />
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
