--- a/app/src/loginblue/res/layout/fragment_register.xml
+++ b/app/src/loginblue/res/layout/fragment_register.xml
@@ -1,155 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
-    tools:context=".view.RegisterFragment">
+    android:background="@drawable/backgroud"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/poppinsextra"
+        android:gravity="center"
+        android:text="Daftar Akun !"
+        android:textColor="@color/primary"
+        android:textSize="40sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppinsregular"
+        android:gravity="center"
+        android:text="Silahkan masukkan data pengguna"
+        android:textColor="@color/primary"
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
         android:orientation="vertical"
-        android:padding="24dp"
-        android:paddingTop="16dp">
+        android:padding="35dp">
 
-        <TextView
-            android:layout_width="172dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
-            android:text="Register"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+        <EditText
+            android:id="@+id/usernameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="32dp"
-            app:cardBackgroundColor="@color/login"
-            app:cardCornerRadius="10dp">
-
-            <LinearLayout
-                android:padding="20dp"
-                android:orientation="vertical"
-                android:background="@color/purple_700"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/UsernameInputLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:hintEnabled="true"
-                    android:hint="Masukkan Username"
-                    app:counterEnabled="true"
-                    app:counterMaxLength="20"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/usernameEditText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:drawableEnd="@drawable/ic_baseline_account_circle_24"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@android:color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="10dp"
+            android:background="@drawable/username"
+            android:fontFamily="@font/poppinssemibold"
+            android:hint = "Username"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:textSize="15dp" />
 
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/EmailInputLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:hintEnabled="true"
-                    android:hint="Masukkan Email"
-                    app:counterEnabled="true"
-                    app:counterMaxLength="20"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintTop_toBottomOf="@id/UsernameInputLayout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/email"
+            android:fontFamily="@font/poppinssemibold"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:textSize="15dp" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/emailEditText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"
-                        android:drawableEnd="@drawable/ic_baseline_account_box_24"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@android:color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:id="@+id/pass_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/password"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Password"
+            android:paddingLeft="8dp"
+            android:paddingTop="5dp"
+            android:textSize="14dp" />
 
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pass_input_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:hintEnabled="true"
-                    android:hint="Masukkan Password"
-                    app:counterMaxLength="20"
-                    app:endIconMode="password_toggle"
-                    app:layout_constraintTop_toBottomOf="@+id/EmailInputLayout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/pass_edit_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/confirmpass_input_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:hintEnabled="true"
-                    android:hint="Konfirmasi Password"
-                    app:counterMaxLength="20"
-                    app:endIconMode="password_toggle"
-                    app:layout_constraintTop_toBottomOf="@+id/pass_input_layout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/confirmpass_edit_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword" />
-                </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:id="@+id/confirmpass_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/password"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Konfirmasi Password"
+            android:paddingLeft="8dp"
+            android:paddingTop="5dp"
+            android:textSize="14dp" />
 
 
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_register"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Register" />
-
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_shape"
+            android:backgroundTint="@color/primary"
+            android:fontFamily="@font/poppinssemibold"
+            android:text="Masuk" />
 
     </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
